# netwatch

./: README.md  netwatch.py  pyproject.toml
netwatch/: netwatch.py
